# vector2png

./: .gitignore  LICENSE  README.cn.md  README.md  pyproject.toml
docs/: api.md  architecture.md  cli.md  contributing.md  dependencies.md  faq.md  options.md  overview.md  quickstart.md  troubleshooting.md
docs/cn/: api.md  architecture.md  cli.md  contributing.md  dependencies.md  faq.md  options.md  overview.md  quickstart.md  troubleshooting.md
examples/: ai_basic.py  dxf_basic.py
examples/files/: example.ai  example.dxf
tests/: test_ai_converter.py  test_dxf_converter.py
vector2png/: __init__.py  __main__.py  cli.py  exceptions.py  options.py  utils.py
vector2png/converters/: __init__.py  ai.py  base.py  dxf.py
